@@ -1,5 +1,6 @@
 ver 0.16.4 (2011/??/??)
 * fix memory leaks
+* don't resume playback when seeking to another song while paused
 * decoder:
   - ffmpeg: workaround for semantic API change in recent ffmpeg versions
   - flac: validate the sample rate when scanning the tag
